--- a/index.html
+++ b/index.html
@@ -137,6 +137,74 @@ window.waitForGISReady = function(timeoutMs = 8000) {
 })();
 </script>
 
+
+<script>
+// ===== Unified Google readiness helpers =====
+window.__gapiReady = !!(window.gapi && gapi.client);
+window.__gisReady  = !!(window.google && google.accounts && google.accounts.oauth2);
+
+window.waitForGapiReady = function(timeoutMs = 8000) {
+  return new Promise((resolve, reject) => {
+    if (window.__gapiReady && window.gapi && gapi.client) return resolve(true);
+    let elapsed = 0;
+    const iv = 50;
+    const tick = async () => {
+      elapsed += iv;
+      try {
+        if (window.__gapiReady && window.gapi && gapi.client) return resolve(true);
+        if (window.gapi && gapi.load && gapi.client && gapi.client.init && !window.__gapiInitStarted) {
+          window.__gapiInitStarted = true;
+          try {
+            await new Promise(r => gapi.load('client', r));
+            await gapi.client.init({ apiKey: '', discoveryDocs: ["https://www.googleapis.com/discovery/v1/apis/drive/v3/rest"] });
+            window.__gapiReady = true;
+            return resolve(true);
+          } catch(e) { /* keep polling */ }
+        }
+      } catch(e) { /* keep polling */ }
+      if (elapsed >= timeoutMs) return reject(new Error('GAPI not ready'));
+      setTimeout(tick, iv);
+    };
+    tick();
+  });
+};
+
+window.waitForGISReady = function(timeoutMs = 8000) {
+  return new Promise((resolve, reject) => {
+    if (window.__gisReady && window.google && google.accounts && google.accounts.oauth2) return resolve(true);
+    let elapsed = 0;
+    const iv = 50, timer = setInterval(() => {
+      elapsed += iv;
+      if (window.google && google.accounts && google.accounts.oauth2) {
+        window.__gisReady = true; clearInterval(timer); resolve(true);
+      } else if (elapsed >= timeoutMs) {
+        clearInterval(timer); reject(new Error('GIS not loaded'));
+      }
+    }, iv);
+  });
+};
+
+window.ensureGoogleReady = async function() {
+  // Try init gdrive once
+  try { if (typeof gdriveInit === 'function') gdriveInit(); } catch(e){}
+  // Wait both sides
+  try { await window.waitForGISReady(6000); } catch(e){}
+  try { await window.waitForGapiReady(6000); } catch(e){}
+  // Ensure tokenClient
+  try {
+    if (!window.tokenClient && window.google && google.accounts && google.accounts.oauth2 && window.CLIENT_ID) {
+      window.tokenClient = google.accounts.oauth2.initTokenClient({
+        client_id: window.CLIENT_ID,
+        scope: (window.SCOPES || 'https://www.googleapis.com/auth/drive.file'),
+        callback: () => {}
+      });
+      window.__gisReady = true;
+    }
+  } catch(e){}
+  return (window.__gisReady && window.__gapiReady && !!window.tokenClient);
+};
+</script>
+
 </head>
 <body>
 <header>
@@ -175,8 +243,8 @@ window.waitForGISReady = function(timeoutMs = 8000) {
 <strong>搜尋</strong>
 <input id="searchInput" placeholder="姓名 / 電話 / 地址" style="width:220px" type="text"/>
 </div>
-<div class="right"><button class="accent" id="gdriveBackupBtn" onclick="window.handleGoogleAction('backup')">☁️Google</button>
-<button id="btnDriveRestore" class="btn-secondary" title="從 Google Drive 還原備份" onclick="window.handleGoogleAction(\'restore\')">↓Google</button>
+<div class="right"><button class="accent" id="gdriveBackupBtn" onclick="window.handleDriveBackupClick()">☁️Google</button>
+<button id="btnDriveRestore" class="btn-secondary" title="從 Google Drive 還原備份" onclick="window.handleDriveRestoreClick()" onclick="window.handleDriveRestoreClick()">↓Google</button>
 <button class="accent" id="newBtn">新增訂單</button>
 <button id="newExpenseBtn">新增花費</button>
 <button id="exportJson">匯出JSON</button>
@@ -1600,80 +1668,70 @@ window.handleDriveRestoreClick = function() {
 
 
 <script>
-// 統一的 Google 授權 + 動作處理（與 ☁️/↓ 完全相同的彈窗時機與流程）
-window.handleGoogleAction = function(action /* 'backup' | 'restore' */) {
+// ===== Unified click handlers (ensure readiness, then sync popup in user gesture) =====
+window.handleDriveBackupClick = async function() {
   try {
-    // 先看是否已有 token（同樣的邏輯套用在兩顆按鈕）
+    const ready = await window.ensureGoogleReady();
+    // Use existing token if any; otherwise request within the click (user gesture)
     var tok = (window.gapi && gapi.auth && typeof gapi.auth.getToken==='function') ? gapi.auth.getToken() : null;
-    var hasToken = !!(tok && tok.access_token);
-
-    function runAction() {
-      if (action === 'backup' && window.uploadBackupToDrive) return window.uploadBackupToDrive();
-      if (action === 'restore' && window.restoreBackupFromDrive) return window.restoreBackupFromDrive();
-      alert('找不到對應的動作: ' + action);
-    }
-
-    if (hasToken) {
-      return runAction();
-    }
-
-    // 若 GIS 尚未就緒，嘗試動態載入，並請使用者再按一次（兩顆按鈕行為相同）
-    if (!window.google || !google.accounts || !google.accounts.oauth2) {
-      var s = document.createElement('script');
-      s.src = 'https://accounts.google.com/gsi/client';
-      s.onload = function(){
-        try { if (typeof gdriveInit === 'function') gdriveInit(); } catch(e){}
-        try {
-          if (!window.tokenClient && window.CLIENT_ID) {
-            window.tokenClient = google.accounts.oauth2.initTokenClient({
-              client_id: window.CLIENT_ID,
-              scope: (window.SCOPES || 'https://www.googleapis.com/auth/drive.file'),
-              callback: () => {}
-            });
-          }
-        } catch(e){}
-        alert('Google 身分服務已載入，請再按一次以授權。');
-      };
-      document.head.appendChild(s);
-      return;
-    }
-
-    // 確保 tokenClient 存在
-    if (!window.tokenClient && window.CLIENT_ID) {
-      window.tokenClient = google.accounts.oauth2.initTokenClient({
-        client_id: window.CLIENT_ID,
-        scope: (window.SCOPES || 'https://www.googleapis.com/auth/drive.file'),
-        callback: (resp) => {
-          if (resp && resp.access_token) {
-            try { if (window.gapi && gapi.auth && gapi.auth.setToken) gapi.auth.setToken({ access_token: resp.access_token }); } catch(e){}
-            runAction();
-          } else {
-            alert('授權失敗，請重試');
-          }
+    if (!(tok && tok.access_token)) {
+      if (!window.tokenClient) { alert('Google 身分服務尚未就緒，請再按一次。'); return; }
+      window.tokenClient.callback = (resp) => {
+        if (resp && resp.access_token) {
+          try { if (window.gapi && gapi.auth && gapi.auth.setToken) gapi.auth.setToken({ access_token: resp.access_token }); } catch(e){}
+          if (window.uploadBackupToDrive) window.uploadBackupToDrive();
+        } else {
+          alert('授權失敗，請重試');
         }
-      });
-    }
-
-    if (!window.tokenClient) {
-      alert('Google 身分服務尚未就緒（可能被阻擋）。請檢查網路或關閉阻擋彈窗後，再按一次。');
+      };
+      window.tokenClient.requestAccessToken({ prompt: 'consent' });
       return;
     }
-
-    // 在使用者手勢中觸發授權彈窗（☁️與↓一致）
-    window.tokenClient.callback = (resp) => {
-      if (resp && resp.access_token) {
-        try { if (window.gapi && gapi.auth && gapi.auth.setToken) gapi.auth.setToken({ access_token: resp.access_token }); } catch(e){}
-        runAction();
-      } else {
-        alert('授權失敗，請重試');
-      }
-    };
-    window.tokenClient.requestAccessToken({ prompt: 'consent' });
+    if (window.uploadBackupToDrive) window.uploadBackupToDrive();
   } catch (e) {
-    console.error(e);
-    alert('無法啟動 Google 授權：' + (e && e.message ? e.message : e));
+    console.error(e); alert('無法啟動 Google 授權/備份流程：' + (e && e.message ? e.message : e));
   }
 };
+
+window.handleDriveRestoreClick = async function() {
+  try {
+    const ready = await window.ensureGoogleReady();
+    var tok = (window.gapi && gapi.auth && typeof gapi.auth.getToken==='function') ? gapi.auth.getToken() : null;
+    if (!(tok && tok.access_token)) {
+      if (!window.tokenClient) { alert('Google 身分服務尚未就緒，請再按一次。'); return; }
+      window.tokenClient.callback = (resp) => {
+        if (resp && resp.access_token) {
+          try { if (window.gapi && gapi.auth && gapi.auth.setToken) gapi.auth.setToken({ access_token: resp.access_token }); } catch(e){}
+          if (window.restoreBackupFromDrive) window.restoreBackupFromDrive();
+        } else {
+          alert('授權失敗，請重試');
+        }
+      };
+      window.tokenClient.requestAccessToken({ prompt: 'consent' });
+      return;
+    }
+    if (window.restoreBackupFromDrive) window.restoreBackupFromDrive();
+  } catch (e) {
+    console.error(e); alert('無法啟動 Google 授權/還原流程：' + (e && e.message ? e.message : e));
+  }
+};
+</script>
+
+
+<script>
+window.addEventListener('DOMContentLoaded', () => {
+  try { if (typeof gdriveInit === 'function') gdriveInit(); } catch(e){}
+});
+window.addEventListener('load', async () => {
+  try { await window.ensureGoogleReady(); } catch(e){}
+  // Bind via JS (in case inline is stripped by CSP)
+  try {
+    var b1 = document.getElementById('gdriveBackupBtn');
+    if (b1) b1.addEventListener('click', window.handleDriveBackupClick);
+    var b2 = document.getElementById('btnDriveRestore');
+    if (b2) b2.addEventListener('click', window.handleDriveRestoreClick);
+  } catch(e){}
+});
 </script>
 
 </body>
