--- a/index.html
+++ b/index.html
@@ -100,111 +100,6 @@
     details.accordion[open] > summary{border-bottom:1px solid var(--border)}
     details.accordion .content{padding:16px}
   </style>
-
-<script>
-window.__gisReady = !!(window.google && google.accounts && google.accounts.oauth2);
-window.waitForGISReady = function(timeoutMs = 8000) {
-  return new Promise((resolve, reject) => {
-    if (window.__gisReady) return resolve(true);
-    let elapsed = 0;
-    const iv = 50, timer = setInterval(() => {
-      elapsed += iv;
-      if (window.google && google.accounts && google.accounts.oauth2) {
-        window.__gisReady = true; clearInterval(timer); resolve(true);
-      } else if (elapsed >= timeoutMs) {
-        clearInterval(timer); reject(new Error('GIS not loaded'));
-      }
-    }, iv);
-  });
-};
-
-// 強化初始化（DOMContentLoaded 與 load 都嘗試）
-(function(){
-  function safeInit(){
-    try {
-      if (typeof gdriveInit === 'function') gdriveInit();
-      if (!window.tokenClient && window.google && google.accounts && google.accounts.oauth2 && window.CLIENT_ID) {
-        window.tokenClient = google.accounts.oauth2.initTokenClient({
-          client_id: window.CLIENT_ID,
-          scope: (window.SCOPES || 'https://www.googleapis.com/auth/drive.file'),
-          callback: () => {}
-        });
-      }
-    } catch(e) {}
-  }
-  document.addEventListener('DOMContentLoaded', safeInit);
-  window.addEventListener('load', safeInit);
-})();
-</script>
-
-
-<script>
-// ===== Unified Google readiness helpers =====
-window.__gapiReady = !!(window.gapi && gapi.client);
-window.__gisReady  = !!(window.google && google.accounts && google.accounts.oauth2);
-
-window.waitForGapiReady = function(timeoutMs = 8000) {
-  return new Promise((resolve, reject) => {
-    if (window.__gapiReady && window.gapi && gapi.client) return resolve(true);
-    let elapsed = 0;
-    const iv = 50;
-    const tick = async () => {
-      elapsed += iv;
-      try {
-        if (window.__gapiReady && window.gapi && gapi.client) return resolve(true);
-        if (window.gapi && gapi.load && gapi.client && gapi.client.init && !window.__gapiInitStarted) {
-          window.__gapiInitStarted = true;
-          try {
-            await new Promise(r => gapi.load('client', r));
-            await gapi.client.init({ apiKey: '', discoveryDocs: ["https://www.googleapis.com/discovery/v1/apis/drive/v3/rest"] });
-            window.__gapiReady = true;
-            return resolve(true);
-          } catch(e) { /* keep polling */ }
-        }
-      } catch(e) { /* keep polling */ }
-      if (elapsed >= timeoutMs) return reject(new Error('GAPI not ready'));
-      setTimeout(tick, iv);
-    };
-    tick();
-  });
-};
-
-window.waitForGISReady = function(timeoutMs = 8000) {
-  return new Promise((resolve, reject) => {
-    if (window.__gisReady && window.google && google.accounts && google.accounts.oauth2) return resolve(true);
-    let elapsed = 0;
-    const iv = 50, timer = setInterval(() => {
-      elapsed += iv;
-      if (window.google && google.accounts && google.accounts.oauth2) {
-        window.__gisReady = true; clearInterval(timer); resolve(true);
-      } else if (elapsed >= timeoutMs) {
-        clearInterval(timer); reject(new Error('GIS not loaded'));
-      }
-    }, iv);
-  });
-};
-
-window.ensureGoogleReady = async function() {
-  // Try init gdrive once
-  try { if (typeof gdriveInit === 'function') gdriveInit(); } catch(e){}
-  // Wait both sides
-  try { await window.waitForGISReady(6000); } catch(e){}
-  try { await window.waitForGapiReady(6000); } catch(e){}
-  // Ensure tokenClient
-  try {
-    if (!window.tokenClient && window.google && google.accounts && google.accounts.oauth2 && window.CLIENT_ID) {
-      window.tokenClient = google.accounts.oauth2.initTokenClient({
-        client_id: window.CLIENT_ID,
-        scope: (window.SCOPES || 'https://www.googleapis.com/auth/drive.file'),
-        callback: () => {}
-      });
-      window.__gisReady = true;
-    }
-  } catch(e){}
-  return (window.__gisReady && window.__gapiReady && !!window.tokenClient);
-};
-</script>
-
 </head>
 <body>
 <header>
@@ -243,8 +138,8 @@ window.ensureGoogleReady = async function() {
 <strong>搜尋</strong>
 <input id="searchInput" placeholder="姓名 / 電話 / 地址" style="width:220px" type="text"/>
 </div>
-<div class="right"><button class="accent" id="gdriveBackupBtn" onclick="window.handleDriveBackupClick()">☁️Google</button>
-<button id="btnDriveRestore" class="btn-secondary" title="從 Google Drive 還原備份" onclick="window.handleDriveRestoreClick()" onclick="window.handleDriveRestoreClick()">↓Google</button>
+<div class="right"><button class="accent" id="gdriveBackupBtn">☁️Google</button>
+<button id="btnDriveRestore" class="btn-secondary" title="從 Google Drive 還原備份">↓Google</button>
 <button class="accent" id="newBtn">新增訂單</button>
 <button id="newExpenseBtn">新增花費</button>
 <button id="exportJson">匯出JSON</button>
@@ -1576,6 +1471,8 @@ function gdriveInit() {
 }
 
 function uploadBackupToDrive() {
+  const BACKUP_FILENAME = '清洗訂單_備份.json'; // 單一備份檔名（每次覆蓋）
+
   const data = {
     orders: JSON.parse(localStorage.getItem('yl_clean_orders_v1') || '[]'),
     staffList: JSON.parse(localStorage.getItem('yl_clean_staff_v1') || '[]'),
@@ -1583,24 +1480,71 @@ function uploadBackupToDrive() {
     exportedAt: new Date().toISOString()
   };
   const blob = new Blob([JSON.stringify(data, null, 2)], { type: 'application/json' });
-  const metadata = {
-    name: `清洗訂單_${new Date().toISOString().split('T')[0]}.json`,
-    mimeType: 'application/json'
-  };
 
-  const form = new FormData();
-  form.append('metadata', new Blob([JSON.stringify(metadata)], { type: 'application/json' }));
-  form.append('file', blob);
+  const authHeader = new Headers({ 'Authorization': 'Bearer ' + gapi.auth.getToken().access_token });
 
-  fetch('https://www.googleapis.com/upload/drive/v3/files?uploadType=multipart', {
-    method: 'POST',
-    headers: new Headers({ 'Authorization': 'Bearer ' + gapi.auth.getToken().access_token }),
-    body: form
+  // 1) 先找是否已存在同名備份檔
+  const query = encodeURIComponent(`name = '${BACKUP_FILENAME}' and trashed = false`);
+  fetch(`https://www.googleapis.com/drive/v3/files?q=${query}&spaces=drive&fields=files(id,name)`, {
+    method: 'GET',
+    headers: authHeader
   })
-  .then(res => res.json())
-  .then(res => {
-    if (res.id) alert('✅ 備份成功，上傳至你的 Google Drive！');
-    else alert('❌ 備份失敗：' + JSON.stringify(res));
+  .then(r => r.json())
+  .then(async listRes => {
+    const files = Array.isArray(listRes.files) ? listRes.files : [];
+
+    if (files.length > 0) {
+      // 2a) 有舊檔：用 PATCH + uploadType=media 直接覆蓋內容
+      const fileId = files[0].id;
+
+      const resp = await fetch(`https://www.googleapis.com/upload/drive/v3/files/${fileId}?uploadType=media`, {
+        method: 'PATCH',
+        headers: new Headers({
+          'Authorization': 'Bearer ' + gapi.auth.getToken().access_token,
+          'Content-Type': 'application/json'
+        }),
+        body: blob
+      });
+
+      const json = await resp.json();
+      if (json && json.id) {
+        // 若有重複的同名檔案，清乾淨只保留第一個
+        if (files.length > 1) {
+          for (let i = 1; i < files.length; i++) {
+            try {
+              await fetch(`https://www.googleapis.com/drive/v3/files/${files[i].id}`, {
+                method: 'DELETE',
+                headers: authHeader
+              });
+            } catch (e) { /* 忽略刪除失敗，不影響覆蓋成功 */ }
+          }
+        }
+        alert('✅ 備份成功（已覆蓋舊檔）');
+      } else {
+        alert('❌ 覆蓋備份失敗：' + JSON.stringify(json));
+      }
+    } else {
+      // 2b) 沒有舊檔：建立一個固定檔名的備份檔
+      const metadata = {
+        name: BACKUP_FILENAME,
+        mimeType: 'application/json'
+      };
+      const form = new FormData();
+      form.append('metadata', new Blob([JSON.stringify(metadata)], { type: 'application/json' }));
+      form.append('file', blob);
+
+      const resp = await fetch('https://www.googleapis.com/upload/drive/v3/files?uploadType=multipart', {
+        method: 'POST',
+        headers: authHeader,
+        body: form
+      });
+      const json = await resp.json();
+      if (json && json.id) {
+        alert('✅ 備份成功（已建立固定檔）');
+      } else {
+        alert('❌ 建立備份檔失敗：' + JSON.stringify(json));
+      }
+    }
   })
   .catch(err => {
     console.error(err);
@@ -1623,117 +1567,77 @@ window.onload = () => {
   };
   document.body.appendChild(script);
 };
-</script>
-<script>
-// 讓「↓Google」點擊時，一定在「使用者手勢」中觸發 GIS 視窗
-window.handleDriveRestoreClick = function() {
+</script><script>
+
+function restoreBackupFromDrive() {
+  const BACKUP_FILENAME = '清洗訂單_備份.json';
   try {
-    // 如果已有 access token，直接還原
-    var tok = (window.gapi && gapi.auth && typeof gapi.auth.getToken==='function') ? gapi.auth.getToken() : null;
-    if (tok && tok.access_token) {
-      if (window.restoreBackupFromDrive) return window.restoreBackupFromDrive();
-    }
-
-    // 若尚未初始化，先建立 tokenClient
-    try {
-      if (!window.tokenClient && window.google && google.accounts && google.accounts.oauth2 && window.CLIENT_ID) {
-        window.tokenClient = google.accounts.oauth2.initTokenClient({
-          client_id: window.CLIENT_ID,
-          scope: (window.SCOPES || 'https://www.googleapis.com/auth/drive.file'),
-          callback: (resp) => {
-            if (resp && resp.access_token) {
-              try { if (window.gapi && gapi.auth && gapi.auth.setToken) gapi.auth.setToken({ access_token: resp.access_token }); } catch(e){}
-              if (window.restoreBackupFromDrive) window.restoreBackupFromDrive();
-            } else {
-              alert('授權失敗，請重試');
-            }
-          }
-        });
-      }
-    } catch(e) {}
-
-    if (!window.tokenClient) {
-      alert('Google 身分服務尚未就緒，請稍後重試（確認網路或關閉阻擋彈窗）。');
+    const tokenObj = gapi && gapi.auth && gapi.auth.getToken ? gapi.auth.getToken() : null;
+    const accessToken = tokenObj && tokenObj.access_token;
+    if (!accessToken) {
+      alert('請先點一次「☁️Google」進行登入/授權後再試。');
       return;
     }
 
-    // 在點擊的同步流程中直接要求 token，確保彈窗不被瀏覽器擋
-    window.tokenClient.requestAccessToken({ prompt: 'consent' });
+    if (!confirm('這會用雲端備份覆蓋本地資料（訂單/人員/聯絡方式）。要繼續嗎？')) return;
+
+    const headers = new Headers({ 'Authorization': 'Bearer ' + accessToken });
+    const query = encodeURIComponent(`name = '${BACKUP_FILENAME}' and trashed = false`);
+
+    // 先找最新的同名檔
+    fetch(`https://www.googleapis.com/drive/v3/files?q=${query}&spaces=drive&fields=files(id,name,modifiedTime)&orderBy=modifiedTime desc`, {
+      method: 'GET',
+      headers
+    })
+    .then(r => r.json())
+    .then(async listRes => {
+      const files = Array.isArray(listRes.files) ? listRes.files : [];
+      if (files.length === 0) {
+        alert('找不到雲端備份檔（清洗訂單_備份.json）。請先用「☁️Google」建立一次。');
+        return;
+      }
+      const fileId = files[0].id;
+      const resp = await fetch(`https://www.googleapis.com/drive/v3/files/${fileId}?alt=media`, {
+        method: 'GET',
+        headers
+      });
+      if (!resp.ok) {
+        alert('下載備份失敗：' + (await resp.text()));
+        return;
+      }
+      const json = await resp.json();
+      const orders = Array.isArray(json.orders) ? json.orders : [];
+      const staffList = Array.isArray(json.staffList) ? json.staffList : [];
+      const contactList = Array.isArray(json.contactList) ? json.contactList : [];
+
+      localStorage.setItem('yl_clean_orders_v1', JSON.stringify(orders));
+      localStorage.setItem('yl_clean_staff_v1', JSON.stringify(staffList));
+      localStorage.setItem('yl_clean_contact_v1', JSON.stringify(contactList));
+
+      // 嘗試刷新 UI
+      try {
+        if (typeof refreshTable === 'function') refreshTable();
+        if (typeof rebuildSummary === 'function') rebuildSummary();
+      } catch (e) {/* 忽略 */}
+
+      alert('✅ 已從 Google 還原備份（本地資料已覆蓋）。');
+    })
+    .catch(err => {
+      console.error(err);
+      alert('❌ 還原過程發生錯誤。');
+    });
   } catch (e) {
     console.error(e);
-    alert('無法啟動 Google 授權：' + (e && e.message ? e.message : e));
+    alert('❌ 還原過程發生錯誤。');
   }
-};
-</script>
+}
 
-
-<script>
-// ===== Unified click handlers (ensure readiness, then sync popup in user gesture) =====
-window.handleDriveBackupClick = async function() {
-  try {
-    const ready = await window.ensureGoogleReady();
-    // Use existing token if any; otherwise request within the click (user gesture)
-    var tok = (window.gapi && gapi.auth && typeof gapi.auth.getToken==='function') ? gapi.auth.getToken() : null;
-    if (!(tok && tok.access_token)) {
-      if (!window.tokenClient) { alert('Google 身分服務尚未就緒，請再按一次。'); return; }
-      window.tokenClient.callback = (resp) => {
-        if (resp && resp.access_token) {
-          try { if (window.gapi && gapi.auth && gapi.auth.setToken) gapi.auth.setToken({ access_token: resp.access_token }); } catch(e){}
-          if (window.uploadBackupToDrive) window.uploadBackupToDrive();
-        } else {
-          alert('授權失敗，請重試');
-        }
-      };
-      window.tokenClient.requestAccessToken({ prompt: 'consent' });
-      return;
-    }
-    if (window.uploadBackupToDrive) window.uploadBackupToDrive();
-  } catch (e) {
-    console.error(e); alert('無法啟動 Google 授權/備份流程：' + (e && e.message ? e.message : e));
-  }
-};
-
-window.handleDriveRestoreClick = async function() {
-  try {
-    const ready = await window.ensureGoogleReady();
-    var tok = (window.gapi && gapi.auth && typeof gapi.auth.getToken==='function') ? gapi.auth.getToken() : null;
-    if (!(tok && tok.access_token)) {
-      if (!window.tokenClient) { alert('Google 身分服務尚未就緒，請再按一次。'); return; }
-      window.tokenClient.callback = (resp) => {
-        if (resp && resp.access_token) {
-          try { if (window.gapi && gapi.auth && gapi.auth.setToken) gapi.auth.setToken({ access_token: resp.access_token }); } catch(e){}
-          if (window.restoreBackupFromDrive) window.restoreBackupFromDrive();
-        } else {
-          alert('授權失敗，請重試');
-        }
-      };
-      window.tokenClient.requestAccessToken({ prompt: 'consent' });
-      return;
-    }
-    if (window.restoreBackupFromDrive) window.restoreBackupFromDrive();
-  } catch (e) {
-    console.error(e); alert('無法啟動 Google 授權/還原流程：' + (e && e.message ? e.message : e));
-  }
-};
-</script>
-
-
-<script>
-window.addEventListener('DOMContentLoaded', () => {
-  try { if (typeof gdriveInit === 'function') gdriveInit(); } catch(e){}
-});
-window.addEventListener('load', async () => {
-  try { await window.ensureGoogleReady(); } catch(e){}
-  // Bind via JS (in case inline is stripped by CSP)
-  try {
-    var b1 = document.getElementById('gdriveBackupBtn');
-    if (b1) b1.addEventListener('click', window.handleDriveBackupClick);
-    var b2 = document.getElementById('btnDriveRestore');
-    if (b2) b2.addEventListener('click', window.handleDriveRestoreClick);
-  } catch(e){}
+// 綁定還原按鈕事件
+window.addEventListener('DOMContentLoaded', ()=>{
+  var btn = document.getElementById('btnDriveRestore');
+  if (btn) btn.addEventListener('click', restoreBackupFromDrive);
 });
 </script>
-
 </body>
 </html>
 <script>
@@ -1743,13 +1647,5 @@ window.addEventListener('DOMContentLoaded', () => {
   const exp = document.getElementById('expenseAcc');
   if (order) order.open = false;
   if (exp) exp.open = false;
-});
-</script>
-
-<script>
-window.addEventListener('DOMContentLoaded', () => {
-  try { if (typeof gdriveInit === 'function') gdriveInit(); } catch(e){}
-  const btn = document.getElementById('btnDriveRestore');
-  if (btn) btn.addEventListener('click', window.handleDriveRestoreClick);
 });
 </script>
